--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden}
 .sheet-card-body{flex:1 1 auto;display:flex;flex-direction:column;gap:16px;padding:20px;background:inherit;min-height:0}
 .log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:calc(var(--radius) - 8px);border:1px solid rgba(148,163,184,.3);background:linear-gradient(145deg,#f5f7fb,#e4e9f5);box-shadow:inset 0 2px 6px rgba(255,255,255,.6),inset 0 -12px 24px rgba(15,23,42,.08);overflow:hidden;min-height:0}
 .log-window::before{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 1px rgba(255,255,255,.5)}
-.log-list{flex:1 1 auto;display:flex;flex-direction:column;align-items:stretch;overflow:auto;scrollbar-gutter:stable;padding:12px;margin:0;gap:12px;min-height:0}
+.log-list{flex:1 1 auto;display:flex;flex-direction:column;align-items:stretch;overflow:auto;scrollbar-gutter:stable;padding:6px;margin:0;gap:6px;min-height:0}
 .log-list::after{content:none}
 .log-window>.empty{padding:48px 24px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:14px;color:var(--muted)}
 @media (max-width:768px){
@@ -35,7 +35,7 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden}
   .sheet-card-header{padding:20px 16px 18px;border-bottom:1px solid rgba(148,163,184,.2)}
   .sheet-card-body{padding:0 16px 16px}
   .log-window{border-radius:0;border:none;background:#fff;box-shadow:none}
-  .log-list{padding:12px 0;gap:10px}
+  .log-list{padding:6px 0;gap:10px}
 }
 .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
 .avatar{display:block;width:auto;height:72px;max-width:100%;border-radius:0;box-shadow:none;object-fit:contain}
@@ -180,7 +180,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-row-date{color:var(--muted);font-size:13px;line-height:1.35;white-space:nowrap;flex:0 0 auto}
 .log-row-date .display{white-space:nowrap}
 .log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:center}
-.log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:clamp(16px,2vw,19px);--scroll-distance:0px}
+.log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1;font-size:14px;--scroll-distance:0px}
 .log-row-title.is-adventure .display{font-weight:700}
 .log-row-title.is-activity .display{font-weight:600}
 .log-row-title.scrollable:hover .display{animation:log-row-scroll 6s ease-in-out alternate forwards}
