--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden}
 .sheet-card{position:relative;background:var(--surface);border:1px solid var(--border);border-radius:var(--radius);box-shadow:var(--shadow1);display:flex;flex-direction:column;min-height:0;flex:1 1 auto;overflow:hidden}
 .sheet-card-header{padding:20px 20px 18px;display:flex;flex-direction:column;gap:18px;border-bottom:1px solid var(--border);background:inherit;flex:0 0 auto}
 .sheet-card-body{flex:1 1 auto;display:flex;flex-direction:column;gap:16px;padding:20px;background:inherit;min-height:0}
-.log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:calc(var(--radius) - 8px);border:1px solid rgba(148,163,184,.3);background:linear-gradient(145deg,#f5f7fb,#e4e9f5);box-shadow:inset 0 2px 6px rgba(255,255,255,.6),inset 0 -12px 24px rgba(15,23,42,.08);overflow:hidden;min-height:0}
-.log-window::before{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 1px rgba(255,255,255,.5)}
-.log-list{flex:1 1 auto;display:flex;flex-direction:column;align-items:stretch;overflow:auto;scrollbar-gutter:stable;padding:12px;margin:0;gap:12px;min-height:0}
+.log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:calc(var(--radius) - 6px);border:1px solid rgba(148,163,184,.35);background:#fff;box-shadow:var(--shadow1);overflow:hidden;min-height:0}
+.log-window::before{content:none}
+.log-list{flex:1 1 auto;display:flex;flex-direction:column;align-items:stretch;overflow:auto;scrollbar-gutter:stable;padding:0;margin:0;gap:0;min-height:0;background:#fff}
 .log-list::after{content:none}
 .log-window>.empty{padding:48px 24px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:14px;color:var(--muted)}
 @media (max-width:768px){
@@ -35,7 +35,7 @@ body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden}
   .sheet-card-header{padding:20px 16px 18px;border-bottom:1px solid rgba(148,163,184,.2)}
   .sheet-card-body{padding:0 16px 16px}
   .log-window{border-radius:0;border:none;background:#fff;box-shadow:none}
-  .log-list{padding:12px 0;gap:10px}
+  .log-list{padding:0;gap:0}
 }
 .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
 .avatar{display:block;width:auto;height:72px;max-width:100%;border-radius:0;box-shadow:none;object-fit:contain}
@@ -141,6 +141,8 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   .title-select{font-size:clamp(18px,5vw,22px)}
   .header-quick{flex-direction:column;align-items:flex-start;gap:12px}
   .inventory-buttons{margin-left:0}
+  .log-row{flex-direction:column;align-items:flex-start}
+  .log-row-chips{margin-left:0;padding-left:0;justify-content:flex-start}
 }
 
 /* Grid / masonry columns */
@@ -148,16 +150,19 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 /* Card */
 .card{display:block;background:#fff;border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow1);overflow:hidden;transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease),background var(--dur) var(--ease)}
 .card:hover{transform:translateY(-3px);box-shadow:var(--shadow2)}
-.log-list .card{position:relative;margin:0;background:var(--row-bg,rgba(255,255,255,.96));border-radius:14px;border:1px solid rgba(148,163,184,.4);box-shadow:none;overflow:hidden;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease),box-shadow var(--dur) var(--ease),transform var(--dur) var(--ease);flex:0 0 auto}
-.log-list .card::before{display:none}
+.log-list .card{--row-bg:transparent;position:relative;margin:0;background:var(--row-bg);border:0;border-bottom:1px solid var(--border);border-radius:0;box-shadow:none;overflow:hidden;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);flex:0 0 auto}
+.log-list .card:first-child{border-top:1px solid var(--border)}
+.log-list .card::before{content:"";position:absolute;inset:0;pointer-events:none;border-left:3px solid transparent;transition:border-color var(--dur) var(--ease)}
 .log-list .card>*{position:relative;z-index:1}
-.log-list .card:hover{transform:translateY(-1px);box-shadow:0 12px 24px rgba(15,23,42,.12);border-color:rgba(148,163,184,.6)}
-.log-list .card.open{--row-bg:rgba(26,115,232,.08);border-color:rgba(26,115,232,.4);box-shadow:0 16px 32px rgba(26,115,232,.16)}
-.log-list .card.editing{--row-bg:rgba(232,240,255,.85);border-color:rgba(26,115,232,.45);box-shadow:0 18px 36px rgba(26,115,232,.18);transform:none}
-.log-list .card .card-hd{padding:14px 16px;display:grid;grid-template-columns:minmax(0,1fr) auto;align-items:center;gap:12px;min-height:64px}
-.log-list .card .card-hd .card-tools{justify-self:end;align-items:center;gap:6px}
-.log-list .card-bd{border-top:1px solid rgba(148,163,184,.28);padding:0 16px;background:linear-gradient(180deg,rgba(248,250,252,.9),rgba(241,245,249,.85))}
-.log-list .card .bd-in{padding:16px 0 20px}
+.log-list .card:hover{--row-bg:rgba(15,23,42,.03)}
+.log-list .card.open{--row-bg:rgba(26,115,232,.08)}
+.log-list .card.open::before{border-left-color:rgba(26,115,232,.65)}
+.log-list .card.editing{--row-bg:rgba(232,240,255,.85)}
+.log-list .card.editing::before{border-left-color:rgba(26,115,232,.7)}
+.log-list .card .card-hd{padding:14px 20px;display:flex;align-items:flex-start;gap:16px;min-height:0}
+.log-list .card .card-hd .card-tools{margin-left:auto;display:flex;align-items:center;gap:8px}
+.log-list .card-bd{border-top:1px solid rgba(148,163,184,.35);padding:0 20px;background:rgba(248,250,252,.85)}
+.log-list .card .bd-in{padding:18px 0 20px}
 .log-list .card .edit-form{padding:18px 0 24px}
 .card:focus-visible{outline:2px solid rgba(26,115,232,.45);outline-offset:4px}
 .card.focus-glow{animation:card-focus-glow 1300ms ease-out}
@@ -166,8 +171,8 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   40%{box-shadow:0 8px 24px rgba(26,115,232,.25),0 0 0 6px rgba(26,115,232,.3)}
   100%{box-shadow:var(--shadow1)}
 }
-.card-hd{display:flex;align-items:center;justify-content:flex-start;gap:14px;padding:16px 20px;cursor:pointer;min-height:0}
-.card-hd .card-tools{display:flex;align-items:flex-start;gap:6px;margin-left:auto;flex-wrap:wrap}
+.card-hd{display:flex;align-items:flex-start;justify-content:flex-start;gap:16px;padding:16px 20px;cursor:pointer;min-height:0}
+.card-hd .card-tools{display:flex;align-items:center;gap:8px;margin-left:auto;flex-wrap:nowrap}
 .card .card-tools .icon-btn{opacity:0;visibility:hidden;pointer-events:none;transform:translateY(-4px);transition:opacity var(--dur) var(--ease),transform var(--dur) var(--ease)}
 .card:hover .card-tools .icon-btn,
 .card.open .card-tools .icon-btn,
@@ -175,12 +180,16 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .card .card-tools .icon-btn:focus-visible{opacity:1;visibility:visible;pointer-events:auto;transform:translateY(0)}
 .card.editing .card-hd{cursor:default}
 .card.editing{border-color:rgba(26,115,232,.35);box-shadow:var(--card-shadow,0 0 0 2px rgba(26,115,232,.08));background:var(--row-bg,#e8f0ff)}
-.log-row{display:grid;grid-template-columns:minmax(0,1fr) auto;align-items:center;gap:12px;width:100%;min-height:56px}
-.log-row-info{display:grid;grid-template-columns:auto minmax(0,1fr);align-items:center;gap:12px;min-width:0}
-.log-row-date{color:var(--muted);font-size:13px;line-height:1.35;white-space:nowrap;flex:0 0 auto}
+.log-row{display:flex;align-items:flex-start;justify-content:space-between;gap:16px;width:100%;min-height:0}
+.log-row-info{display:flex;flex-direction:column;align-items:flex-start;gap:4px;min-width:0;flex:1 1 auto}
+.log-row-date{color:var(--muted);font-size:12px;line-height:1.4;white-space:nowrap}
 .log-row-date .display{white-space:nowrap}
-.log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:center}
+.card:not(.editing) .log-row-date{display:none}
+.card.editing .log-row-date{display:flex;align-items:center;gap:6px}
+.log-row-title{flex:1 1 auto;min-width:0;position:relative;overflow:hidden;display:flex;align-items:flex-start;font-weight:600;color:var(--ink)}
 .log-row-title .display{display:block;width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;line-height:1.35;font-size:clamp(16px,2vw,19px);--scroll-distance:0px}
+.log-row-meta{font-size:12px;color:var(--muted);line-height:1.4}
+.card.editing .log-row-meta{display:none}
 .log-row-title.is-adventure .display{font-weight:700}
 .log-row-title.is-activity .display{font-weight:600}
 .log-row-title.scrollable:hover .display{animation:log-row-scroll 6s ease-in-out alternate forwards}
@@ -188,9 +197,12 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   .log-row-title.scrollable:hover .display{animation:none}
 }
 .chips{display:flex;gap:6px;flex-wrap:wrap;margin-top:0;min-height:0}
-.log-row-chips{margin-left:auto;justify-content:flex-end;flex-wrap:nowrap;gap:8px;align-items:center;overflow:hidden;padding-left:8px}
-.log-row-chips .pill{white-space:nowrap}
+.log-row-chips{margin-left:auto;justify-content:flex-end;flex-wrap:nowrap;gap:12px;align-items:center;overflow:hidden;padding-left:8px;font-size:13px;color:var(--muted);flex-shrink:0}
 .log-row-chips:empty{display:none}
+.log-row-chips .pill{white-space:nowrap;background:transparent;border:none;padding:0;font-weight:600;font-size:13px;color:inherit;box-shadow:none}
+.log-row-chips .pill.gain{color:#15803d}
+.log-row-chips .pill.loss{color:#dc2626}
+.log-row-chips .pill.neutral{color:var(--muted)}
 .pill{background:#fff7e6;color:#a05a00;border:1px solid #ffe3b0;border-radius:999px;padding:4px 8px;font-weight:700;font-size:11px}
 @keyframes log-row-scroll{
   0%{transform:translateX(0)}
@@ -3748,6 +3760,7 @@ function makeCard(a,idx){
   let dateEditorSlot=null, dateDisplayEl=null;
   let codeEditorSlot=null, codeDisplayEl=null;
   let codeFieldView=null;
+  let metaDisplayEl=null;
 
   const dateSpan=document.createElement('span'); dateSpan.className='log-row-date editable-inline';
   const dateDisplay=document.createElement('span'); dateDisplay.className='display'; dateDisplay.textContent=fmtDate(a.date);
@@ -3762,17 +3775,62 @@ function makeCard(a,idx){
   nameSpan.append(nameDisplay,nameEditor); nameSpan.__display=nameDisplay; nameSpan.__editor=nameEditor;
   titleEditorSlot=nameEditor; titleDisplayEl=nameDisplay;
 
-  info.appendChild(dateSpan);
+  const buildHeaderMeta=(entry)=>{
+    if(!entry) return '';
+    const parts=[];
+    const dateText=fmtDate(entry.date);
+    if(dateText && dateText!=='—') parts.push(dateText);
+    const codeText=normalizeDisplayValue(entry.code);
+    if(codeText) parts.push(codeText);
+    const dmText=normalizeDisplayValue(entry.dm);
+    if(dmText) parts.push(`DM: ${dmText}`);
+    if(isActivityEntry(entry)) parts.push('Downtime activity');
+    return parts.join(' • ');
+  };
+
+  const metaSpan=document.createElement('span');
+  metaSpan.className='log-row-meta';
+  metaDisplayEl=metaSpan;
+
   info.appendChild(nameSpan);
+  info.appendChild(metaSpan);
+  info.appendChild(dateSpan);
   main.appendChild(info);
 
+  metaSpan.textContent=buildHeaderMeta(a);
+
   const chips=document.createElement('div'); chips.className='chips log-row-chips';
+  const applyValueStyle=(pillEl,value)=>{
+    if(!pillEl) return;
+    pillEl.classList.remove('gain','loss','neutral');
+    if(value>0) pillEl.classList.add('gain');
+    else if(value<0) pillEl.classList.add('loss');
+    else pillEl.classList.add('neutral');
+  };
   if(act){
-    if(gp){ const p=pill('GP '+fmtSigned(gp)); p.classList.add('muted'); chips.appendChild(p); }
-    if(dtd){ const p=pill('DTD '+fmtSigned(dtd)); p.classList.add('muted'); chips.appendChild(p); }
+    if(gp){
+      const gpPill=pill('GP '+fmtSigned(gp));
+      applyValueStyle(gpPill,gp);
+      chips.appendChild(gpPill);
+    }
+    if(dtd){
+      const dtPill=pill('DTD '+fmtSigned(dtd));
+      applyValueStyle(dtPill,dtd);
+      chips.appendChild(dtPill);
+    }
   }else{
     const netGP=(a.gp_net==null?gp:a.gp_net);
-    chips.appendChild(pill('GP '+fmtSigned(Number(netGP))));
+    const gpValue=Number(netGP);
+    const gpPill=pill('GP '+fmtSigned(gpValue));
+    applyValueStyle(gpPill,gpValue);
+    chips.appendChild(gpPill);
+    const netDTD=(a.dtd_net==null?dtd:a.dtd_net);
+    const dtValue=Number(netDTD);
+    if(dtValue){
+      const dtPill=pill('DTD '+fmtSigned(dtValue));
+      applyValueStyle(dtPill,dtValue);
+      chips.appendChild(dtPill);
+    }
   }
   main.appendChild(chips);
   hd.appendChild(main);
@@ -4367,6 +4425,17 @@ function makeCard(a,idx){
     const lostItems=controls.lost_perm_item.getValues?controls.lost_perm_item.getValues():parseLostItemList(controls.lost_perm_item.value);
     lostField.__display.textContent=lostItems.length?lostItems.join(', '):'—';
     lostField.style.display=(editing || lostItems.length)?'':'none';
+
+    if(metaDisplayEl){
+      const metaEntry={...a};
+      if(editing){
+        metaEntry.date=controls.date.value||a.date;
+        metaEntry.code=controls.code.value;
+        metaEntry.dm=controls.dm.value;
+        metaEntry.kind=(controls.kind.value||'adventure')==='adventure'?'adventure':'activity';
+      }
+      metaDisplayEl.textContent=buildHeaderMeta(metaEntry);
+    }
 
     syncKindVisibility();
   }
